BUG FIX: Graphs are initially too wide when displayed.
Also fixed a few CodeClimate style guide violations.
Also made some minor style changes.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,9 +36,9 @@ header a {
 .btn-graph {
   box-sizing: border-box;
   cursor: pointer;
+  list-style-type: none;
   margin: 0;
   padding: 1em;
-  list-style-type: none;
   width: 100%;
 }
 
@@ -52,18 +52,20 @@ footer {
 
 .graph {
   height: 300px;
-  width: 100%;
+  border-bottom: 1px solid hsla(194, 55%, 87%, 1);
+  margin: auto;
+  padding: .5em 1em .5em .25em;
 }
 
 .left_menu {
   background-color: hsla(194, 55%, 97%, 1);
   border-right: 1px solid hsla(194, 55%, 87%, 1);
   box-sizing: border-box;
-  margin-top: 45px;
   float: left;
-  height: 100%;
-  padding: 1em;
+  min-height: 100%;
   max-width: 500px;
+  padding: 1em;
+  padding-top: 50px;
   width: 25%;
 }
 
@@ -73,23 +75,22 @@ footer {
 
 header {
   background-color: hsla(194, 55%, 45%, 1);
-  height: 43px;
-  top: 0;
-  position: fixed;
-  z-index: 200;
-  width: 100%;
   border-bottom: solid 1px hsla(194, 55%, 60%, 1);
   box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+  height: 43px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 200;
 }
 
 /* header nav styling */
   .header_nav {
-    display: inline;
     float: right;
     font-weight: bolder;
     list-style: none;
     height: 100%;
-    margin: 0 100px;
+    margin: 0 4% 0 0;
     text-align: center;
   }
 
@@ -142,22 +143,18 @@ header {
   display: none;
 }
 
-.highcharts-container {
-  /*width: 100%;*/
-}
-
 .logo {
   float: left;
   margin-top: 6px;
-  margin-left: 10px;
+  margin-left: 4%;
   width: 150px;
 }
 
 main {
-  float: left;
   background-color: hsla(360, 100%, 100%, 1);
-  display: inline-block;
-  margin-top: 45px;
+  box-sizing: border-box;
+  float: left;
+  padding-top: 50px;
   min-height: 100%;
   width: 75%;
 }
